--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>给邱邱老师看的烟花表演</title>
+    <title>给如如看的烟花表演</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
