--- a/index.html
+++ b/index.html
@@ -144,5 +144,6 @@
     <script src="dist/Stage%400.1.4.js"></script>
     <script src="dist/MyMath.js"></script>
     <script src="./script.js"></script>
+    change
   </body>
 </html>
